2010-05-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/src/rpc/clnt_tcp.c: Partial merger from freebsd
	(Fix strict-aliasing).

2010-05-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/src/rpc/clnt_raw.c: Partial merger from freebsd
	(Improved 16 bit compatibility; Fix strict-aliasing).

2010-05-25	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/src/rpc/rpc_prot.c: Partial merger from freebsd
	(Improved 64 bit compatibility; bug fix).

2010-05-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1528/cpukit
	* libcsupport/src/malloc_boundary.c: Cast to intptr_t* instead of
	int32_t* for 16 bit target compliance.

2010-05-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libblock/include/rtems/nvdisk.h, libblock/src/nvdisk-sram.c:
	Use pointer arithmetic instead of int32_t arithmetic for 16bit
	compatibility.

2010-05-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/shell/fts.c: Cast to uintptr_t instead of long for better
	16bit target compliance.

2010-05-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/rfs/rtems-rfs-bitmaps-ut.c: Use "16 bit int" arg 
	in call to srand if "32 bit int" doesn't fit into "int".

2010-05-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libblock/src/flashdisk.c, libblock/src/nvdisk.c:
	Cast argp to uintptr_t temporary instead of uint32_t temporary
	(Avoid incompatible pointer casts on 16bit targets).

2010-05-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* automake/compile.am: (Temporarily) Add -Werror=overflow,
	-Werror=pointer-to-int-cast, -Werror=int-to-pointer-cast.

2010-05-20	Bharath Suri <bharath.s.jois@gmail.com>

	* libcsupport/src/_rename_r.c: Avoid overwriting of errno by
	_rename_r to invalid values.

2010-05-18	Chris Johns <chrisj@rtems.org>

	* libblock/src/diskdevs.c, libblock/include/rtems/blkdev.h,
	libblock/src/bdbuf.c: PR 1448/filesystem.

	* libblock/include/rtems/blkdev.h, libblock/src/bdbuf.c: PR
	1514/filesystem.
	
2010-05-17	Oleg Kravtsov <Oleg.Kravtsov@oktetlabs.ru>
